fixed font color for sections when in dark mode

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
 }
 
 .section {
-    color: #090909;
+    color: --pico-h2-color;
     font-size: 95%;
     font-weight: bold;
 }
